# governed-agents

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude/skills/budget-check/: SKILL.md
.claude/skills/memory/: SKILL.md
.claude/skills/proposal-schema/: SKILL.md
.claude/skills/stop-conditions/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/noop/: CLAUDE.md  README.md  smoke.sh  tool_allowlist.toml
agents/noop/tasks/: smoke.md
agents/notifier/: CLAUDE.md  README.md  hooks.py  notify.sh  tool_allowlist.toml
agents/notifier/tasks/: notify.md
agents/orchestrator/: CLAUDE.md  README.md  runner.py
agents/publisher/: CLAUDE.md  README.md  hooks.py  publish.sh  tool_allowlist.toml
agents/publisher/tasks/: publish.md
docs/: CLI.md  MERGE_GOVERNANCE.md  USAGE.md
governed_agents/: __init__.py  __main__.py  cli.py  demo.py
governed_agents/scaffold/: .env.example  CLAUDE.md
governed_agents/scaffold/agents/example/: CLAUDE.md  tool_allowlist.toml
infra/: README.md  app.py  credentials_proxy.py  dashboard.html  db.py  decision_hooks.py  proposal_policy.toml  watchdog.py
scripts/: demo.sh  run_agent.sh  smoke.sh  start_orchestrator.sh  start_watchdog.sh  verify.sh
tests/: conftest.py  test_admin_status.py  test_audit.py  test_bind.py  test_budget.py  test_cli.py  test_credentials.py  test_decision_hooks.py  test_noop_end_to_end.py  test_notifier_hook.py  test_proposal_policy.py  test_proposals.py  test_publisher_hook.py  test_runaway_watchdog.py  test_runner_unit.py  test_skills_contracts.py  test_watchdog.py
