[project]
name = "governed-agents"
version = "0.1.0"
description = "A governance harness for autonomous AI agents: a human proposal-gate, budget caps, an independent watchdog, and a full audit trail."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.49.0,<1",
    "sqlmodel>=0.0.22,<0.1",
    "httpx>=0.27,<1",
    "structlog>=24.1,<26",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.0,<2",
    "ruff>=0.6,<1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "infra/static"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
