[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "governed-agents"
version = "0.1.0"
description = "A governance harness for autonomous AI agents: a human proposal-gate, budget caps, an independent watchdog, and a full audit trail."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.138.1,<1",
    "uvicorn[standard]>=0.49.0,<1",
    "sqlmodel>=0.0.39,<0.1",
    "httpx>=0.27,<1",
    "structlog>=26.1.0,<27",
]

[project.urls]
Homepage = "https://github.com/wicki2c/governed-agents"
Repository = "https://github.com/wicki2c/governed-agents"
Issues = "https://github.com/wicki2c/governed-agents/issues"

[project.scripts]
governed-agents = "governed_agents.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.0,<2",
    "pytest-cov>=6,<8",
    # Starlette's TestClient (used via fastapi.testclient) prefers the httpx2
    # backend and warns when only plain httpx is present. Test-only: runtime
    # HTTP in agents/orchestrator/runner.py still uses stable httpx.
    "httpx2>=2.5.0,<3",
    "ruff>=0.15.20,<1",
]

# Explicit wheel package list. Auto-discovery is deliberately NOT used: it
# would sweep tests/, agents/*/workspace/, and infra/state/ into the wheel.
# Tracked data files under these dirs (infra/dashboard.html,
# infra/proposal_policy.toml, infra/static/**, governed_agents/scaffold/**,
# governed_agents/py.typed, agents/*/CLAUDE.md, tool_allowlist.toml, tasks/*.md)
# ship automatically because hatchling sources file inclusion from VCS.
[tool.hatch.build.targets.wheel]
packages = ["governed_agents", "infra", "agents"]

# Belt-and-suspenders exclusion of runtime junk from both wheel and sdist.
# Most of these are already gitignored (hatchling respects VCS), but the
# explicit excludes guarantee they never ship even if a stray file is staged.
[tool.hatch.build]
exclude = [
    "tests",
    "tests/**",
    "agents/*/workspace",
    "agents/*/workspace/**",
    "infra/state",
    "infra/state/**",
    "*.sqlite",
    "*.sqlite-shm",
    "*.sqlite-wal",
    "*.jsonl",
    "**/__pycache__",
    ".coverage",
    ".coverage.*",
    ".ruff_cache",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "infra/static"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

# Coverage is opt-in via `--cov` (CI passes it) so local subset runs aren't
# penalised by the threshold. branch=true makes the gate stricter than plain
# statement coverage; fail_under locks in the current 83% baseline (raise it
# as coverage improves — never silently lower it).
[tool.coverage.run]
source = ["infra", "agents"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 83
